@@ -60,5 +60,35 @@ class vxSnippet extends xPDOObject {
     public static function getTabTpl() {
         return self::$tabTpl;
     }
+    
+    /**
+     * Reverts a snippet to the selected version.
+     * @param array $options
+     *
+     * @return bool
+     */
+    public function revert(array $options = array()) {
+        if (!$this->get('content_id')) {
+            return false;
+        }
+
+        /* @var modSnippet $object */
+        $object = $this->xpdo->getObject('modSnippet',$this->get('content_id'));
+        if (!($object instanceof modSnippet)) {
+            /* Could not find the snippet, so we'll assume it was deleted. We'll create a new one and force that ID. */
+            $object = $this->xpdo->newObject('modSnippet');
+            $object->set('id', $this->get('content_id'));
+        }
+
+        $object->fromArray(array(
+            'name' => $this->get('name'),
+            'description' => $this->get('description'),
+            'category' => ($this->xpdo->getCount('modCategory',array('id' => $this->get('category'))) > 0) ? $this->get('category') : 0,
+            'snippet' => $this->get('snippet'),
+            'locked' => $this->get('locked'),
+        ), '', true);
+
+        return $object->save();
+    }
 }
 
